<resources>
    <string name="app_name">FitX</string>

    <string name="action_settings">Settings</string>

    <!-- Hardcoded strings -->
    <string name="message_login">Login</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="master_username">alpine</string>
    <string name="master_password">123</string>
    <string name="title_activity_image">ImageActivity</string>

    <string name="hello_world">Hello world!</string>

    <!-- Actionbar Strings -->
    <string name="dashboard">Dashboard</string>
    <string name="social">View Posts</string>
    <string name="messaging">Messages</string>
    <string name="progress">Update Progress</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_app">AppActivity</string>

    <!-- Shared Preferences Primary Tags -->
    <string name="sp_tag_session">usersession</string>
    <string name="sp_tag_progress">sharedprogress</string>

    <!-- User Session SP Tags-->
    <string name="sp_tag_session_username">sessionUser</string>
    <string name="sp_tag_session_id">sessionid</string>

    <!-- Shared Progress SP Tags -->

</resources>
