<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="pinkraptorproductions.fitx.AppActivity">

    <item
        android:id="@+id/action_dashboard"
        android:icon="@drawable/dashboard"
        android:showAsAction="always"
        android:title="@string/dashboard"/>

    <item
        android:id="@+id/action_social"
        android:icon="@drawable/social"
        android:showAsAction="always"
        android:title="@string/social"/>

    <item
        android:id="@+id/action_messages"
        android:icon="@drawable/messaging"
        android:showAsAction="always"
        android:title="@string/messaging"/>

    <item
        android:id="@+id/action_progress"
        android:icon="@drawable/progress"
        android:showAsAction="always"
        android:title="@string/progress"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:showAsAction="always"
        android:title="@string/settings"/>

</menu>