<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight=".02" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/message_login"
        android:textSize="36sp"
        android:id="@+id/messageLoginTextView"
        android:layout_gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight=".08" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logoImageView"
        android:background="@drawable/logo"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_gravity="center"
        android:layout_weight="0.15"
        android:gravity="center">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_username"
            android:textColorHint="#00FF00"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:id="@+id/usernameEditText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textColorHint="#00FF00"
            android:textColor="#FFFFFF"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:fontFamily="sans-serif"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.1"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exitButton"
            android:background="@drawable/exit_quit"
            android:layout_gravity="bottom|right"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            android:background="@drawable/login"
            android:layout_gravity="bottom|left"/>
    </FrameLayout>

</LinearLayout>